--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ashish-Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -13,12 +14,12 @@
         <td><img src="images/circle-cropped.png" alt="Profile Picture of Ashish Kumar" async></td>
         <td>
           <p><em>Ashish Kumar,Student at <strong><a href="https://nitdgp.ac.in/">National Institute of Technology,Durgapur</a></strong></em></p>
-          <p>New Academic Block<br>Mob No:123456789<br>Email:<span class="underline">xyz1234@gmail.com</span></p>
+          <p>New Academic Block<br>Mob No:7367037282<br>Email:<span class="underline">ashishkumaras789@gmail.com</span></p>
         </td>
       </tr>
     </tbody>
   </table>
-  <hr noshade>
+  <hr>
 
   <p>
   <h2>About Me:</h2>
@@ -29,7 +30,7 @@
       <h3>Academics</h3>
     </li>
     <ol type="i">
-      <li>High Schooling at Lotus Public School</li>
+      <li>High School at STKHS</li>
       <li>Doing Graduation at NIT Durgapur</li>
     </ol>
     <li>
@@ -53,8 +54,8 @@
     </table>
   </ul>
   </p>
-  <hr noshade>
-  <h2>For Any Query</h2>
+  <hr>
+  <h2>For Any Query:</h2>
   <a href="query.html">Click here</a>
 </body>
 
